# amazon-dynamodb-tools

./: .gitignore  README.md  requirements.txt  table_class_evaluator.py  table_tagger.py
archived/metrics-collector/: README.md  metric_config.json  pyproject.toml  requirements.txt
archived/metrics-collector/metrics_collector/: collector.py  logger_config.py  metrics.py  storage.py
tools/dynamodb-optima/: .gitignore  README.md  pyproject.toml  pytest.ini
tools/dynamodb-optima/.streamlit/: config.toml
tools/dynamodb-optima/docs/: README.md  advanced-topics.md  analysis-deep-dive.md  architecture.md  aws-organizations-setup.md  command-reference.md  configuration.md  gui-usage.md
tools/dynamodb-optima/src/dynamodb_optima/: __init__.py  cli.py  config.py  logging.py  paths.py
tools/dynamodb-optima/src/dynamodb_optima/analysis/: autoscaling_sim.py  capacity_mode.py  table_class.py  utilization.py
tools/dynamodb-optima/src/dynamodb_optima/aws/: client.py  collector.py  cur_collector.py  cur_discovery.py  discovery.py  metrics.py  organizations.py  pricing_collector.py
tools/dynamodb-optima/src/dynamodb_optima/commands/: collect.py  collect_cur.py  discover.py
tools/dynamodb-optima/src/dynamodb_optima/commands/analysis/: analyze_capacity.py  analyze_table_class.py  analyze_utilization.py
tools/dynamodb-optima/src/dynamodb_optima/commands/core/: checkpoints.py  health.py  status.py  version.py
tools/dynamodb-optima/src/dynamodb_optima/core/: state.py
tools/dynamodb-optima/src/dynamodb_optima/database/: connection.py  schema.py  view_manager.py
tools/dynamodb-optima/src/dynamodb_optima/gui/: __init__.py  app.py  database.py  models.py
tools/dynamodb-optima/src/dynamodb_optima/gui/components/: __init__.py
tools/dynamodb-optima/src/dynamodb_optima/gui/page_modules/: capacity_analysis.py  dashboard.py  table_class_analysis.py  utilization_analysis.py
tools/dynamodb-optima/src/dynamodb_optima/utils/: error_handling.py  graceful_shutdown.py  health_checks.py  progress.py  timestamp_alignment.py
tools/dynamodb-optima/src/metrics_collector/: cli.py  config.py  logging.py
tools/dynamodb-optima/src/metrics_collector/commands/: collect.py  collect_cur.py
tools/dynamodb-optima/src/metrics_collector/commands/analysis/: analyze_capacity.py  analyze_table_class.py  analyze_utilization.py
tools/dynamodb-optima/src/metrics_collector/commands/core/: checkpoints.py  status.py  version.py
tools/dynamodb-optima/src/metrics_collector/database/: connection.py
tools/dynamodb-optima/src/metrics_collector/gui/: database.py
tools/dynamodb-optima/src/metrics_collector/gui/page_modules/: __init__.py  dashboard.py  (+2 more)
tools/dynamodb-optima/src/metrics_collector/utils/: error_handling.py  health_checks.py  simple_progress.py
tools/dynamodb-optima/tests/: conftest.py
tools/dynamodb-optima/tests/aws/: test_organizations.py  test_pricing_collector.py
(+617 files in other folders)
