[project]
name = "metrics-collector"
version = "0.1.0"
description = ""
authors = [
    {name = "Esteban",email = "estserna@amazon.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aioboto3 (>=13.4.0,<14.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "simpleeval (>=1.0.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
name = "metrics-collector"
