[project]
name = "metrics-collector"
version = "2.0.0"
description = "DynamoDB cost optimization and analysis platform - consolidating capacity-mode-evaluator, table_class_optimizer, and metrics-collector"
authors = [{name = "AWS Labs", email = ""}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies from dmetrics
    "duckdb>=0.9.2",
    "aioboto3>=12.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "click>=8.1.7",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "psutil>=5.9.0",  # System monitoring for health checks
    
    # GUI dependencies (from capacity-mode-evaluator)
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "tabulate>=0.9.0",  # For table formatting in CLI
    
    # Additional AWS services for analysis
    # (Organizations API, Athena for CUR queries, Pricing API)
    # Note: boto3 includes all service clients
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    "moto>=4.2.0",  # For mocking AWS services in tests
]

[project.scripts]
metrics-collector = "metrics_collector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # More lenient for faster development

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=metrics_collector",
    "--cov-report=term-missing",
    "--cov-report=html",
]
